--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="root" class="xl:container mx-auto px-3"></div>
+    <div id="root" class="px-3"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
